add search component

--- a/src/app/layout/shipment/shipment.component.html
+++ b/src/app/layout/shipment/shipment.component.html
@@ -1,5 +1,5 @@
 <div [@routerTransition]>
-    <app-page-header [heading]="'Shipment'" [icon]="'fas fa-truck-loading'" [help]="'/login'"></app-page-header>
-    
+    <app-page-header [heading]="'Shipment'" [icon]="'truck-loading'" [help]="'/login'"></app-page-header>
+    <app-search [search]='childSearch'></app-search>
     <hr>
     </div>
