--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg fixed-top">
-  <a class="navbar-brand" href="#"><img src="./favicon.ico"/> Shipping SAP CIM ZOE </a>
+  <a class="navbar-brand" href="#"><img src="./favicon.ico" width="25px"> Shipping SAP CIM ZOE </a>
   <button class="navbar-toggler" type="button" (click)="toggleSidebar()">
       <fa-icon class="text-muted" [icon]="['fas', 'bars']"></fa-icon>
   </button>
