--- a/src/app/shared/components/search/sap-modal/sap-modal.component.html
+++ b/src/app/shared/components/search/sap-modal/sap-modal.component.html
@@ -1,16 +1,18 @@
-<div class="row" #myModal>
-    <div class="col-sm-12">
-        <fieldset class="form-group">
-            <label class="ng-tns-c9-19">sales Order</label>
-            <input class="form-control" type="text" (keyup.enter)="salesOrderControl.focus()" #deliveryControl
-                [(ngModel)]="parentInfo['salesOrder']" placeholder="Enter a sales order">
-        </fieldset>
-        <fieldset class="form-group">
-            <label class="ng-tns-c9-19">Delivery</label>
-            <input class="form-control" type="text" #salesOrderControl [(ngModel)]="parentInfo['delivery']" placeholder="Enter a delivery">
-        </fieldset>
+<block-ui>
+    <div class="row" #myModal>
+        <div class="col-sm-12">
+            <fieldset class="form-group">
+                <label class="ng-tns-c9-19">sales Order</label>
+                <input class="form-control" type="text" (keyup.enter)="salesOrderControl.focus()" #deliveryControl
+                    [(ngModel)]="parentInfo['salesOrder']" placeholder="Enter a sales order">
+            </fieldset>
+            <fieldset class="form-group">
+                <label class="ng-tns-c9-19">Delivery</label>
+                <input class="form-control" type="text" #salesOrderControl [(ngModel)]="parentInfo['delivery']"
+                    placeholder="Enter a delivery">
+            </fieldset>
+        </div>
     </div>
-</div>
-
+</block-ui>
 
 <!-- <pre>{{parentInfo | json}}</pre> -->
