--- a/src/app/layout/finance/finance.component.html
+++ b/src/app/layout/finance/finance.component.html
@@ -1,3 +1,23 @@
-<p>
-  finance works!
-</p>
+<div [@routerTransition]>
+  <app-page-header [heading]="'Finance'" [icon]="'file-invoice-dollar'" [help]="'/login'"></app-page-header>
+  <app-search [search]='childSearch'></app-search>
+  <hr>
+
+  <div class="col-md-12 table-responsive" *ngIf="childSearch['result']">
+      <div class="row">
+          <div class="col-lg-12">
+              <div class="card bg-light border-custom2" *ngFor="let header of childSearch['result']" style="margin-bottom: 10px;">
+                  <div class="card-body">
+                      <div class="row">
+                          <div class='col-lg-12'>
+                              <app-shipment-table [header]="header" [config]="config"></app-shipment-table>
+                          </div>
+                      </div>
+                  </div>
+                  <br>
+              </div>
+          </div>
+      </div>
+  </div>
+  <!-- <pre>{{childSearch.result | json}}</pre> -->
+</div>
