--- a/src/app/layout/shipment/shipment.component.html
+++ b/src/app/layout/shipment/shipment.component.html
@@ -6,24 +6,13 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="card bg-light border-custom2" *ngFor="let header of childSearch['result']" style="margin-bottom: 10px;">
-                    <div class="card-header">
-                            <h3 class="text-primary float-left"> Please complete shipment information</h3>
-                        <button class="btn btn-outline-info float-right" type="button" (click)="header.collapsed=toggle(header.collapsed)">
-                            <i class="fas fa-angle-double-down" [ngClass]="{'fa-angle-double-up': header.collapsed}"></i>
-                            Detail
-                        </button>
-                        <button class="btn btn-primary float-right mr-1" type="button" (click)="downloadFlatFile(header)"><i
-                                class="fas fa-file-csv"></i> Export Flat File</button>
-                        <button class="btn btn-success  float-right mr-1" type="button" (click)="confirmCloseShipment(header)"><i
-                                class="far fa-save"></i>
-                            <span *ngIf="header['status']=='SHIPMENT'"> Close </span> <span *ngIf="header['status']!='SHIPMENT'">
-                                Open </span>
-                            Customs </button>
+                    <div class="card-header" *ngIf="false">
+                            <h5 class="text-primary float-left"> Please complete shipment information</h5>
                     </div>
                     <div class="card-body">
                         <div class="row">
                             <div class='col-lg-12'>
-                                <app-shipment-table [header]="header" [config]="config" [customsAddInvoice]="addInvoice"></app-shipment-table>
+                                <app-shipment-table [header]="header" [config]="config"></app-shipment-table>
                             </div>
                         </div>
                     </div>
